src/test/deca/syntax/invalid/provided/chaine_incorrecte_1.deca
// Description:
//    tests de programme incorrect lexicalement (car présence du caractère '\n')
//
// Resultats:
//    Ligne 9 : Erreur lexicale (et donc syntaxique).
//    
//

"\n"
